fixes for charts aligning

--- a/src/app/bodymetrics/components/weight-chart.component.scss
+++ b/src/app/bodymetrics/components/weight-chart.component.scss
@@ -1,12 +1,13 @@
 :host {
-    width: 100%;
     display: block;
-    position: relative;
+    padding:10px 20px 10px 20px;
 }
-
+div.canvas-box{
+    width:100%;
+    height: 300px;
+}
 canvas.graph {
     width: 100%;
-    height: 300px;
-    margin:30px;
+    height: 100%;
     display: block;
 }
