--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,6 @@
 @import "~material-design-icons/iconfont/material-icons.css";
 html,
 body {
-    height: 100%;
     margin: 0;
     background: #f8f8f8;
 }
